force-app/main/default/objects/Outreach_Evidence_Link__c/Outreach_Evidence_Link__c.object-meta.xml
<CustomObject>
    <description>Links outreach outcomes/care items to Communication Timeline or Appointment evidence after daily reconcile.</description>
    <label>Outreach Evidence Link</label>
    <nameField>
        <displayFormat>OEL-{00000}</displayFormat>
        <label>Evidence Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outreach Evidence Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>