force-app/main/default/objects/Outreach_Evidence_Link__c/fields/Agent_Match__c.field-meta.xml
<CustomField>
    <fullName>Agent_Match__c</fullName>
    <label>Agent Match</label>
    <length>40</length>
    <type>Text</type>
</CustomField>