force-app/main/default/objects/Outreach_Evidence_Link__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipName>Appt_Evidence_Links</relationshipName>
    <type>Lookup</type>
</CustomField>