force-app/main/default/objects/Outreach_Evidence_Link__c/fields/Communication_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Communication_Timeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Communication Timeline</label>
    <referenceTo>Communication_Timeline__c</referenceTo>
    <relationshipName>Comm_Evidence_Links</relationshipName>
    <type>Lookup</type>
</CustomField>