force-app/main/default/objects/Outreach_Evidence_Link__c/fields/Match_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Match_Confidence__c</fullName>
    <label>Match Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>