force-app/main/default/objects/Outreach_Evidence_Link__c/fields/Match_Kind__c.field-meta.xml
<CustomField>
    <fullName>Match_Kind__c</fullName>
    <label>Match Kind</label>
    <length>40</length>
    <type>Text</type>
</CustomField>