force-app/main/default/objects/Outreach_Evidence_Link__c/fields/Match_Method__c.field-meta.xml
<CustomField>
    <fullName>Match_Method__c</fullName>
    <label>Match Method</label>
    <length>80</length>
    <type>Text</type>
</CustomField>