force-app/main/default/objects/Outreach_Evidence_Link__c/fields/Need__c.field-meta.xml
<CustomField>
    <fullName>Need__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Item</label>
    <referenceTo>Patient_Need__c</referenceTo>
    <relationshipName>Need_Evidence_Links</relationshipName>
    <type>Lookup</type>
</CustomField>