force-app/main/default/objects/Outreach_Evidence_Link__c/fields/Outreach_Event__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outreach Event</label>
    <referenceTo>Outreach_Event__c</referenceTo>
    <relationshipName>Event_Evidence_Links</relationshipName>
    <type>Lookup</type>
</CustomField>