force-app/main/default/objects/Outreach_Evidence_Link__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Patient_Evidence_Links</relationshipName>
    <type>Lookup</type>
</CustomField>