force-app/main/default/objects/Outreach_Evidence_Link__c/fields/Reconcile_Status__c.field-meta.xml
<CustomField>
    <fullName>Reconcile_Status__c</fullName>
    <label>Reconcile Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>